[FEATURE] 1、增加创建tag的接口；2、增加参数支持每日自动清零的tag；3、增加获取批量号段的接口；4、更新依赖库版本；
